SF Primes/src/objects/Traver_Coaching__c.object
<CustomObject>
    <fields>
        <fullName>Action_Plan_1__c</fullName>
        <inlineHelpText>Action Plan #1 (What are the steps necessary to make that happen)?</inlineHelpText>
        <label>Action Plan 1</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Action_Plan_2__c</fullName>
        <inlineHelpText>Action Plan #2 (What are the steps necessary to make that happen)?</inlineHelpText>
        <label>Action Plan 2</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Action_Plan_3__c</fullName>
        <inlineHelpText>Action Plan #3 (What are the steps necessary to make that happen)?</inlineHelpText>
        <label>Action Plan 3</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Appointments_Set__c</fullName>
        <inlineHelpText>How many appointments did the dealership set during your visit?</inlineHelpText>
        <label>Appointments Set</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BDI_Updated__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are they updating Business Development Intelligence (Tool)?.</inlineHelpText>
        <label>BDI Updated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BD__c</fullName>
        <inlineHelpText>Add any comments about BD Boot Camp here.</inlineHelpText>
        <label>BD Boot Camp Comments</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BOU_Utilization__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is the store effectively applying the skills and utilizing the tools from BOU?</inlineHelpText>
        <label>BOU Utilization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Boot_Camp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Are they scheduled or have they already attended boot camp?</inlineHelpText>
        <label>Boot Camp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Traver_Onsite_Visits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Confirmation_Created__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check only if Confirmation is created</inlineHelpText>
        <label>Confirmation Created</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contact_Date__c</fullName>
        <label>Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Days_Per_Month_Number__c</fullName>
        <formula>Traver_Project__r.Days_Per_Month_Number__c</formula>
        <label>Days Per Month Number</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Declined_Service_Calls__c</fullName>
        <label>Declined Service Calls</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Defection__c</fullName>
        <label>Defection</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Delivery_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Delivery Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>B4B Coaching</relationshipLabel>
        <relationshipName>B4B_Coaching</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equity_Mining__c</fullName>
        <label>Equity Mining</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Expense_Submitted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expense Submitted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_1__c</fullName>
        <inlineHelpText>Goal #1 (Goal or accomplishment to be done prior to next visit)?</inlineHelpText>
        <label>Goal 1</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_2__c</fullName>
        <inlineHelpText>Goal #2 (Goal or accomplishment to be done prior to next visit)?</inlineHelpText>
        <label>Goal 2</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Goal_3__c</fullName>
        <inlineHelpText>Goal #3 (Goal or accomplishment to be done prior to next visit)?</inlineHelpText>
        <label>Goal 3</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incoming_Sales_Calls__c</fullName>
        <label>Incoming Sales Calls</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Incoming_Service_Calls__c</fullName>
        <label>Incoming Service Calls</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internet__c</fullName>
        <label>Internet</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Key_Observations_1__c</fullName>
        <inlineHelpText>Infrastructure - Key Observations</inlineHelpText>
        <label>Key Observations</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Measurement_1__c</fullName>
        <inlineHelpText>How are we going to measure this Goal (Tools, reports, etc)? TAKE A PICTURE OF THE
TOOL/REPORT THAT IS GOING TO BE USED</inlineHelpText>
        <label>Measurement 1</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Measurement_2__c</fullName>
        <inlineHelpText>How are we going to measure this Goal (Tools, reports, etc)? TAKE A PICTURE OF THE
TOOL/REPORT THAT IS GOING TO BE USED</inlineHelpText>
        <label>Measurement 2</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>New_Mgr__c</fullName>
        <inlineHelpText>How many new managers since last visit? (If Any)</inlineHelpText>
        <label>New Mgr&apos;s</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Coaching_Call__c</fullName>
        <label>Next Coaching Call</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Visit_Date__c</fullName>
        <label>Next Visit Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Visit_Strategy__c</fullName>
        <label>Next Visit Strategy</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>No_Show_Appointments__c</fullName>
        <label>No Show Appointments</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_PSG__c</fullName>
        <label>Number of Days - PSG</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days_Traver__c</fullName>
        <inlineHelpText>Number of Days</inlineHelpText>
        <label>Number of Days - Traver</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Onsite_Days_Purchased__c</fullName>
        <formula>Traver_Project__r.Total_Days_Contracted_Traver__c</formula>
        <label>Onsite Days Purchased</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Owner_Base__c</fullName>
        <label>Owner Base</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PartyID__c</fullName>
        <label>PartyID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Contacts__c</fullName>
        <label>Primary Client Contacts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Email__c</fullName>
        <label>Primary Client Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Client_Phone__c</fullName>
        <label>Primary Client Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Progress_Since_Last_Session__c</fullName>
        <label>Progress Since Last Session</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Project_Account__c</fullName>
        <formula>Traver_Project__r.Account__r.Name</formula>
        <label>Project Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recalls__c</fullName>
        <label>Recalls</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recommended_Service__c</fullName>
        <label>Recommended Service</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_BDI_Progress__c</fullName>
        <label>Review BDI Progress</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Review_Recent_Visit__c</fullName>
        <inlineHelpText>Premium Packages Only</inlineHelpText>
        <label>Review Recent In-store Visit</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Staff_with_Most_Appointments__c</fullName>
        <inlineHelpText>Staff with most Appointments – (Name, phone, email)</inlineHelpText>
        <label>Staff with Most Appointments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status_Update_Calls__c</fullName>
        <label>Status Update Calls</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agenda Set</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tentative</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Cancelled_By__c</fullName>
        <label>Cancelled By</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Client</fullName>
                <color>#0B6FCE</color>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal</fullName>
                <color>#78C953</color>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Cancelled_Reason__c</fullName>
        <label>Cancelled Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>Client Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CDK Request</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Completed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Completed By</label>
        <referenceTo>TRV_Resource__c</referenceTo>
        <relationshipLabel>B4B Coaching (Completed By)</relationshipLabel>
        <relationshipName>TRV_Completed_By_B4BCoaching</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Account_Name_onProjectAccount__c</fullName>
        <formula>Traver_Project__r.Account__r.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_City_onAccount__c</fullName>
        <formula>IF( ISBLANK( Delivery_Location__c ) ,  Traver_Project__r.Account__r.BillingCity ,  Delivery_Location__r.BillingCity)</formula>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_ContactEmail_onConsultingProject__c</fullName>
        <formula>Traver_Project__r.Contact__r.Email</formula>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Contact_Id_onConsultingProject__c</fullName>
        <formula>Traver_Project__r.Contact__r.Id</formula>
        <label>Contact Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Contact_Name_onProjectContact__c</fullName>
        <formula>Traver_Project__r.Contact__r.Full_Name__c</formula>
        <label>Contact Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Contact_Phone_onProjectContact__c</fullName>
        <formula>Traver_Project__r.Contact__r.Phone</formula>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Contact_onConsultingProject__c</fullName>
        <formula>HYPERLINK(&apos;/&apos;+ Traver_Project__r.Contact__c ,  Traver_Project__r.Contact__r.Full_Name__c )</formula>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_End_Date_Of_B4B__c</fullName>
        <formula>CASE( RecordType.DeveloperName , &apos;PSC_Visit&apos;,  Visit_Start_Date__c +  IF(Number_of_Days_PSG__c &gt; 1, Number_of_Days_PSG__c - 1, 0), &apos;Process_Coach_Visit&apos;, Visit_Start_Date__c + IF(Number_of_Days_Traver__c &gt; 1, Number_of_Days_Traver__c - 1,0) , &apos;Non_Billable&apos;, Visit_Start_Date__c + IF(TRV_Number_Of_Days_NonBillable__c &gt; 1, TRV_Number_Of_Days_NonBillable__c - 1, 0), Visit_Start_Date__c )</formula>
        <label>End Date Of B4B</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Is_Onsite_Days_onRecordType__c</fullName>
        <formula>RecordType.DeveloperName != &apos;Non_Billable&apos; ||  X5_Star_Guarantee__c != true</formula>
        <label>Is Onsite Days</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Resource_Name_onResource__c</fullName>
        <formula>TRV_Completed_By__r.TRV_Resource__r.FirstName + &apos; &apos; +  TRV_Completed_By__r.TRV_Resource__r.LastName</formula>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_Resource_User_Id_onResource__c</fullName>
        <formula>TRV_Completed_By__r.TRV_Resource__c</formula>
        <label>Resource User Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_FRM_State_onAccount__c</fullName>
        <formula>IF( ISBLANK( Delivery_Location__c ) ,   Traver_Project__r.Account__r.BillingState ,  Delivery_Location__r.BillingState)</formula>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TRV_Multi_Country_Paperwork__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Multi-Country Paperwork</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TRV_NonBillable_Reason__c</fullName>
        <label>Non-Billable Reason</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>PTO - Vacation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO - Sick</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PTO - Holiday</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Classroom/Virtual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training - Field/Shadowing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekday Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekend Travel</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Number_Of_Days_NonBillable__c</fullName>
        <label>Number Of Days - NonBillable</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRV_Push_Reason__c</fullName>
        <label>Push Reason</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TRV_Pushed_By__c</fullName>
        <description>Dependent picklist on status</description>
        <label>Pushed By</label>
        <picklist>
            <controllingField>Status__c</controllingField>
            <picklistValues>
                <fullName>By Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>By CDK</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>TRV_Pushes__c</fullName>
        <defaultValue>0</defaultValue>
        <label># Pushes</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TRV_Resource_Email__c</fullName>
        <label>Resource Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>T_E_Billed_to_Client_PSG__c</fullName>
        <formula>Traver_Project__r.T_E_Billed_to_Client_PSG__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T&amp;E Billed to Client - PSG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>T_E_Billed_to_Client_Traver__c</fullName>
        <formula>Traver_Project__r.T_E_Billed_to_Client_Traver__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>T&amp;E Billed to Client - Traver</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Total_Billable_Expenses__c</fullName>
        <label>Total Billable Expenses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Traver_Project__c</fullName>
        <label>Consulting Project</label>
        <referenceTo>Traver_Project__c</referenceTo>
        <relationshipLabel>B4B Coaching</relationshipLabel>
        <relationshipName>Traver_Onsite_Visits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Unsold_Follow_Up__c</fullName>
        <label>Unsold Follow Up</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have It</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have and Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Have, Using and Getting Results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Upload_3__c</fullName>
        <inlineHelpText>How are we going to measure this Goal (Tools, reports, etc)? TAKE A PICTURE OF THE
TOOL/REPORT THAT IS GOING TO BE USED</inlineHelpText>
        <label>Upload 3</label>
        <length>5000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Visit_Start_Date__c</fullName>
        <label>Visit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>X1_1_Appt_Ratio__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Did the dealership exceed a 1:1 Appointment Ratio the day(s) of your visit? Submit a
picture of the Appointment Board to document their Appointment Ratio.</inlineHelpText>
        <label>1:1 Appt Ratio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X5_Star_Guarantee__c</fullName>
        <defaultValue>false</defaultValue>
        <label>5 Star Guarantee</label>
        <type>Checkbox</type>
    </fields>
    <label>B4B Coaching</label>
    <nameField>
        <displayFormat>B4B-{00000}</displayFormat>
        <label>B4B Coaching ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>B4B Coaching</pluralLabel>
    <recordTypes>
        <fullName>EPC_Coaching_Log</fullName>
        <active>true</active>
        <description>EPC Coaching Log</description>
        <label>EPC Coaching Log</label>
    </recordTypes>
    <recordTypes>
        <fullName>Forfeiture</fullName>
        <active>true</active>
        <description>This is for managers to capture when a client loses days on their contract.</description>
        <label>Forfeiture</label>
    </recordTypes>
    <recordTypes>
        <fullName>Non_Billable</fullName>
        <active>true</active>
        <description>Track non-billable hours</description>
        <label>Non-Billable</label>
    </recordTypes>
    <recordTypes>
        <fullName>PSC_Visit</fullName>
        <active>true</active>
        <description>PSC Visit</description>
        <label>PSC Visit</label>
    </recordTypes>
    <recordTypes>
        <fullName>Process_Coach_Visit</fullName>
        <active>true</active>
        <description>Process Coach Visit</description>
        <label>Process Coach Visit</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DS_PSC_Req_PrimaryClientContact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(RecordType.Name=&quot;PSC Visit&quot;,ISPICKVAL(Status__c, &quot;Completed&quot;), ISBLANK(Primary_Client_Contacts__c))</errorConditionFormula>
        <errorDisplayField>Primary_Client_Contacts__c</errorDisplayField>
        <errorMessage>Please enter value for Primary Client Contacts</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRV_PushReason_Pushed_By_Required_Status</fullName>
        <active>true</active>
        <description>User should provide values for &apos;Push Reason&apos; and &apos;Pushed By&apos; when related &apos;Status&apos; field is updated as &apos;Pushed&apos;.</description>
        <errorConditionFormula>AND(ISPICKVAL( Status__c  , &apos;Pushed&apos;),  OR(TRV_Push_Reason__c == &apos;&apos;,  ISPICKVAL( TRV_Pushed_By__c , &apos;&apos;)))</errorConditionFormula>
        <errorMessage>Please enter the Push Reason and Pushed By.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRV_TerminationDateGreaterThanB4BEndDate</fullName>
        <active>true</active>
        <description>Visit Start Date plus No of days(End Date of B4B) visit cannot be same or greater than the User Termination Date.</description>
        <errorConditionFormula>(  ISNEW() || ISCHANGED( TRV_Completed_By__c )  ||  ISCHANGED( TRV_FRM_End_Date_Of_B4B__c ))  &amp;&amp;  TRV_FRM_End_Date_Of_B4B__c &gt;= TRV_Completed_By__r.TRV_Termination_Date__c</errorConditionFormula>
        <errorDisplayField>Visit_Start_Date__c</errorDisplayField>
        <errorMessage>Visit Start Date plus No of days visit cannot be same or greater than the User Termination Date.</errorMessage>
    </validationRules>
</CustomObject>